infrastructure/flux-operator/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
  namespace: flux-system
spec:
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator-health
  namespace: flux-system
spec:
  rules:
    - matches:
        - path:
            type: Exact
            value: /healthz
      backendRefs:
        - name: flux-operator
          port: 9080
